results/SVCOMP/conversational/log-putstatic_getstatic1-2024_03_15_02_55_54.txt
class A {
  //@ public model static int i;
  public static int i = 1;
}
;

class putstatic_getstatic1 {
  //@ ensures A.i == 1 ==> \result == false;
  //@ ensures A.i == 999 ==> \result == true;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:3: error: variable i is already defined in class A
  public static int i = 1;
                    ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:11: error: cannot find symbol
    if(A.i != 1) return false;
        ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:12: error: cannot find symbol
    A.i = 999;
     ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:13: error: cannot find symbol
    if (A.i != 999)
         ^
  symbol:   variable i
  location: class A
4 errors

class A {
  //@ public model static int i;
  public static int i = 1;
}
;

class putstatic_getstatic1 {
  //@ ensures A.i == 1 ==> \result == false;
  //@ ensures A.i == 999 ==> \result == true;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:3: error: variable i is already defined in class A
  public static int i = 1;
                    ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:11: error: cannot find symbol
    if(A.i != 1) return false;
        ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:12: error: cannot find symbol
    A.i = 999;
     ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:13: error: cannot find symbol
    if (A.i != 999)
         ^
  symbol:   variable i
  location: class A
4 errors

class A {
  //@ public model static int i;
  public static int i = 1;
}
;

class putstatic_getstatic1 {
  //@ ensures A.i == 1 ==> \result == false;
  //@ ensures A.i == 999 ==> \result == true;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:3: error: variable i is already defined in class A
  public static int i = 1;
                    ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:11: error: cannot find symbol
    if(A.i != 1) return false;
        ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:12: error: cannot find symbol
    A.i = 999;
     ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:13: error: cannot find symbol
    if (A.i != 999)
         ^
  symbol:   variable i
  location: class A
4 errors

class A {
  //@ public model static int i;
  public static int i = 1;
}
;

class putstatic_getstatic1 {
  //@ ensures A.i == 1 ==> \result == false;
  //@ ensures A.i == 999 ==> \result == true;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:3: error: variable i is already defined in class A
  public static int i = 1;
                    ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:11: error: cannot find symbol
    if(A.i != 1) return false;
        ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:12: error: cannot find symbol
    A.i = 999;
     ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:13: error: cannot find symbol
    if (A.i != 999)
         ^
  symbol:   variable i
  location: class A
4 errors

class A {
  //@ public model static int i;
  public static int i = 1;
}
;

class putstatic_getstatic1 {
  //@ ensures A.i == 1 ==> \result == false;
  //@ ensures A.i == 999 ==> \result == true;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:3: error: variable i is already defined in class A
  public static int i = 1;
                    ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:11: error: cannot find symbol
    if(A.i != 1) return false;
        ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:12: error: cannot find symbol
    A.i = 999;
     ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:13: error: cannot find symbol
    if (A.i != 999)
         ^
  symbol:   variable i
  location: class A
4 errors

class A {
  //@ public model static int i;
  public static int i = 1;
}
;

class putstatic_getstatic1 {
  //@ ensures A.i == 1 ==> \result == false;
  //@ ensures A.i == 999 ==> \result == true;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:3: error: variable i is already defined in class A
  public static int i = 1;
                    ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:11: error: cannot find symbol
    if(A.i != 1) return false;
        ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:12: error: cannot find symbol
    A.i = 999;
     ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:13: error: cannot find symbol
    if (A.i != 999)
         ^
  symbol:   variable i
  location: class A
4 errors

class A {
  //@ public model static int i;
  public static int i = 1;
}
;

class putstatic_getstatic1 {
  //@ ensures A.i == 1 ==> \result == false;
  //@ ensures A.i == 999 ==> \result == true;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:3: error: variable i is already defined in class A
  public static int i = 1;
                    ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:11: error: cannot find symbol
    if(A.i != 1) return false;
        ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:12: error: cannot find symbol
    A.i = 999;
     ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:13: error: cannot find symbol
    if (A.i != 999)
         ^
  symbol:   variable i
  location: class A
4 errors

class A {
  //@ public model static int i;
  public static int i = 1;
}
;

class putstatic_getstatic1 {
  //@ ensures A.i == 1 ==> \result == false;
  //@ ensures A.i == 999 ==> \result == true;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:3: error: variable i is already defined in class A
  public static int i = 1;
                    ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:11: error: cannot find symbol
    if(A.i != 1) return false;
        ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:12: error: cannot find symbol
    A.i = 999;
     ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:13: error: cannot find symbol
    if (A.i != 999)
         ^
  symbol:   variable i
  location: class A
4 errors

class A {
  //@ public model static int i;
  public static int i = 1;
}
;

class putstatic_getstatic1 {
  //@ ensures A.i == 1 ==> \result == false;
  //@ ensures A.i == 999 ==> \result == true;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:3: error: variable i is already defined in class A
  public static int i = 1;
                    ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:11: error: cannot find symbol
    if(A.i != 1) return false;
        ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:12: error: cannot find symbol
    A.i = 999;
     ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:13: error: cannot find symbol
    if (A.i != 999)
         ^
  symbol:   variable i
  location: class A
4 errors

class A {
  //@ public model static int i;
  public static int i = 1;
}
;

class putstatic_getstatic1 {
  //@ ensures A.i == 1 ==> \result == false;
  //@ ensures A.i == 999 ==> \result == true;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:3: error: variable i is already defined in class A
  public static int i = 1;
                    ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:11: error: cannot find symbol
    if(A.i != 1) return false;
        ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:12: error: cannot find symbol
    A.i = 999;
     ^
  symbol:   variable i
  location: class A
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:13: error: cannot find symbol
    if (A.i != 999)
         ^
  symbol:   variable i
  location: class A
4 errors

